package mx.edev.design_principles.dependency_inversion.case1.violation;

public enum PaymentType {
  PAYPAL,
  MASTER_CARD
}
